# gtest-project-template

./: .gitignore  .gitmodules  README.md  gtestmake.py
test/: CMakeLists.txt  fixture_template.cpp  fixture_template.h  test_template.cpp  test_template_combine_param.cpp  test_template_param.cpp
test/fixture/: fixture_template.cpp  fixture_template.h
test/utils/: File.h  Random.h  gtestio.h  path.h
test_template/: CMakeLists.txt  test_template_combine_param.cpp  test_template_param.cpp
test_template/fixture/: fixture_template.h
test_template/utils/: File.h  Random.h  gtestio.h  path.cpp  tempfile.cpp  tempfile.h
